--- a/main.html
+++ b/main.html
@@ -9,28 +9,28 @@
 <!-- the entire body must be written by student -->
 <div id="myCarousel" class="carousel slide">
 <div class="carousel-inner">
-<div class="carousel-item first-slide">
+<div class="first-slide">
 <img src="https://images.unsplash.com/photo-1677058569208-74e09eb0d437?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="carousel-item second-slide">
+<div class="second-slide">
 <img src="https://images.unsplash.com/photo-1677093685946-3b2bed5aeb7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="carousel-item third-slide active">
+<div class="third-slide active">
 <img src="https://images.unsplash.com/photo-1613310023042-ad79320c00ff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="carousel-item fourth-slide">
+<div class="fourth-slide">
 <img src="https://images.unsplash.com/photo-1677093685946-3b2bed5aeb7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="carousel-item fifth-slide">
+<div class="fifth-slide">
 <img src="https://images.unsplash.com/photo-1613310023042-ad79320c00ff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
 </div>
 <button class="carousel-control carousel-control-prev left carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+<span class="glyphicon-chevron-left" aria-hidden="true"></span>
 <span class="carousel-control visually-hidden">Previous</span>
 </button>
 <button class="carousel-control carousel-control-next right carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+<span class="glyphicon-chevron-right" aria-hidden="true"></span>
 <span class="carousel-control visually-hidden">Next</span>
 </button>
 </div>
