--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <!-- the entire body must be written by student -->
 <div id="myCarousel" class="carousel slide">
 <div class="carousel-inner">
-<div class="first-slide">
+<div class="carousel-item first-slide">
 <img src="https://images.unsplash.com/photo-1677058569208-74e09eb0d437?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="second-slide">
+<div class="carousel-item second-slide">
 <img src="https://images.unsplash.com/photo-1677093685946-3b2bed5aeb7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="third-slide active">
+<div class="carousel-item third-slide active">
 <img src="https://images.unsplash.com/photo-1613310023042-ad79320c00ff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="fourth-slide">
+<div class="carousel-item fourth-slide">
 <img src="https://images.unsplash.com/photo-1677093685946-3b2bed5aeb7b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80" class="d-block w-100" alt="...">
 </div>
-<div class="fifth-slide">
+<div class="carousel-item fifth-slide">
 <img src="https://images.unsplash.com/photo-1613310023042-ad79320c00ff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="d-block w-100" alt="...">
 </div>
 </div>
