--- a/main.html
+++ b/main.html
@@ -26,11 +26,11 @@
 </div>
 </div>
 <button class="carousel-control carousel-control-prev left carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-<span class="glyphicon-chevron-left" aria-hidden="true"></span>
+<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 <span class="carousel-control visually-hidden">Previous</span>
 </button>
 <button class="carousel-control carousel-control-next right carousel-control" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-<span class="glyphicon-chevron-right" aria-hidden="true"></span>
+<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 <span class="carousel-control visually-hidden">Next</span>
 </button>
 </div>
